Fixed bug #11406: querygenerator/fullsearch doesn't use t3lib_iconWorks::skinImg, added alignment for images
git-svn-id: https://svn.typo3.org/TYPO3v4/Core/trunk@5647 709f56b5-9817-0410-a4d7-c38de5d9e867

--- a/typo3/stylesheet.css
+++ b/typo3/stylesheet.css
@@ -799,6 +799,12 @@ body#ext-lowlevel-config-index-php #lowlevel-config-var {
 }
 
 
+/* dbint module */ 
+body#ext-lowlevel-dbint-index-php table.qg-make-query td input {
+	margin: 0 2px;
+	vertical-align: middle;
+}
+
 /* - - - - - - - - - - - - - - - - - - - - -
 
 Trees
